fixed album covers size on mobile (text)

--- a/src/css/MainPage.scss
+++ b/src/css/MainPage.scss
@@ -24,6 +24,7 @@
   h2 {
     font-size: 5em;
     font-family: Hollow;
+    font-weight: 900;
   }
 
   .full-screen {
@@ -72,12 +73,14 @@
       font-family: Hollow;
       font-size: 3em;
       margin-block: 0.5em;
+      font-weight: 900;
       span {
         color: #a7dca5;
       }
     }
 
     h1 {
+      font-weight: 900;
       font-family: Hollow;
       font-size: 10em;
       margin: 0;
@@ -258,16 +261,18 @@
       flex-direction: column;
       gap: 1em;
       width: 80%;
+      height: 80%;
       h2 {
         max-width: 200px;
       }
 
       .main-bandcamp {
         flex-direction: column;
-        align-items: start;
+        align-items: center;
         .main-bandcamp-item {
-          height: 150px;
-          width: 100%;
+          margin-bottom: 1em;
+          height: 20vh;
+          width: 20vh;
         }
         gap: 0.5em;
       }
